# velux-remote-control

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/theo_velux_remote_control/: cli.py  config.py  velux.py
src/velux_remote_control/: cli.py  velux.py
