[project]
name = "theo-velux-remote-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Theo-Dancoisne"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
velux = "theo_velux_remote_control.cli:app"
